syntax = "proto3";

option csharp_namespace = "Common";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package orders;

service SearchProto {
  rpc Search (SearchRequest) returns (stream SearchResult);
}

enum SearchType {
    search_period = 0;
    search_name_period = 1;
    search_in_channel = 2;
}

message SearchRequest{
	SearchType SearchType = 1;
	google.protobuf.Timestamp StartTime =2;
	google.protobuf.Timestamp EndTime =3;
	string Request = 4;
	int32 Limit = 5;
	bool isGroup = 6;
	bool isChannel = 7;
	repeated int64 Ids =8;
}

message SearchResult{
	string Link =1;
	string Text =2;
	string Name = 3;
}

